# peppermint-backend

./: .gitmodules  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
loquat-core/: Cargo.toml
loquat-core/src/: channels.rs  command.rs  lib.rs  track.rs
loquat-proto/: Cargo.toml  build.rs  loquat.proto
loquat-proto/src/: lib.rs
loquat-server/: Cargo.toml
loquat-server/src/: grpc_service.rs  loquat_jack.rs  main.rs  service_impl.rs
loquat-server/src/backends/: dummy.rs  jack.rs
peppermint-core/: Cargo.toml
peppermint-core/src/: channels.rs  command.rs  lib.rs  track.rs
peppermint-proto/: Cargo.toml  build.rs  peppermint.proto
peppermint-proto/src/: lib.rs
peppermint-server/: Cargo.toml
peppermint-server/src/: grpc_service.rs  main.rs  manager.rs
peppermint-server/src/backends/: dummy.rs  jack.rs  mod.rs
