[package]
edition = "2021"
name = "loquat-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loquat-proto = {path = "../loquat-proto"}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.6"
