[package]
edition = "2021"
name = "peppermint-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
jack = "0.9"
livi = "0.4"
log = "0.4"
peppermint-core = {path = "../peppermint-core"}
peppermint-proto = {path = "../peppermint-proto"}
ringbuf = "0.2"
structopt = "0.3"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.6"
